--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -5,7 +5,7 @@
     	<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <base href="/ui/_design/config/" target>
+        <base href="/ui/_design/ui/" target>
         <link rel="stylesheet" href="bower_components/jquery-ui/themes/ui-lightness/jquery-ui.css" type="text/css" media="screen" charset="utf-8"/>
         <link rel="stylesheet" href="style/jquery.ui.slider.css" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
