--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="bower_components/jquery-ui/themes/ui-lightness/jquery-ui.css" type="text/css" media="screen" charset="utf-8"/>
         <link rel="stylesheet" href="style/jquery.ui.slider.css" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+        <link rel="stylesheet" href="bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css">
         <link rel="stylesheet" href="style/style.css" type="text/css"/>
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
@@ -538,7 +539,7 @@
         <script src="bower_components/backbone-couchdb/backbone-couchdb.js"></script>
         <script src="bower_components/backbone.validation/dist/backbone-validation.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-        <!--add src for bootstrap-datepicker -->
+        <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
         <script src="bower_components/jquery-json/dist/jquery.json.min.js"></script>
         <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
         <script src="/_utils/script/jquery.couch.js"></script>
