templates linked and don't put npm in db

--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -507,5 +507,6 @@
         <script src="script/home.js"></script>
         <script src="script/routes.js"></script>
         <script src="script/startup.js"></script>
+        <script src="templates.js"></script>
     </body>
 </html>
