--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -335,16 +335,16 @@
         </script>
 
         <!--end of templates -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/jquery-ui/jquery-ui.js"></script>
-        <script src="bower_components/underscore/underscore.js"></script>
-        <script src="bower_components/backbone/backbone.js"></script>
-        <script src="bower_components/backbone-couchdb/backbone-couchdb.js"></script>
-        <script src="bower_components/backbone.validation/dist/backbone-validation.js"></script>
-        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
+        <script src="bower_components/underscore/underscore.min.js"></script>
+        <script src="bower_components/backbone/backbone.min.js"></script>
+        <script src="bower_components/backbone-couchdb/backbone-couchdb.min.js"></script>
+        <script src="bower_components/backbone.validation/dist/backbone-validation.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
         <script src="bower_components/jquery-json/dist/jquery.json.min.js"></script>
-        <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
+        <script src="bower_components/jquery.cookie/jquery.cookie.min.js"></script>
         <script src="/_utils/script/jquery.couch.js"></script>
         <script src="templates.js"></script>
         <script src="script/app.js"></script>
