--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -338,7 +338,7 @@
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
         <script src="bower_components/underscore/underscore.min.js"></script>
-        <script src="bower_components/backbone/backbone.min.js"></script>
+        <script src="bower_components/backbone/backbone.js"></script>
         <script src="bower_components/backbone-couchdb/backbone-couchdb.min.js"></script>
         <script src="bower_components/backbone.validation/dist/backbone-validation.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
