--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -77,7 +77,7 @@
         <script src="bower_components/jquery-json/dist/jquery.json.min.js"></script>
         <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
         <script src="/_utils/script/jquery.couch.js"></script>
-        <script src="router-ui.min.js"></script>
+        <script src="router-ui.js"></script>
         <!--<script src="templates.js"></script>
         <script src="script/app.js"></script>
         <script src="script/utility.js"></script>
