don't put startup code in same file

--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -87,7 +87,7 @@
         <script src="script/notifications.js"></script>
         <script src="script/login.js"></script>
         <script src="script/home.js"></script>
-        <script src="script/routes.js"></script>
-        <script src="script/startup.js"></script>-->
+        <script src="script/routes.js"></script>-->
+        <script src="script/startup.js"></script>
     </body>
 </html>
