--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -77,8 +77,7 @@
         <script src="bower_components/jquery-json/dist/jquery.json.min.js"></script>
         <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
         <script src="/_utils/script/jquery.couch.js"></script>
-        <script src="router-ui.js"></script>
-        <!--<script src="templates.js"></script>
+        <script src="templates.js"></script>
         <script src="script/app.js"></script>
         <script src="script/utility.js"></script>
         <script src="script/history.js"></script>
@@ -87,7 +86,7 @@
         <script src="script/notifications.js"></script>
         <script src="script/login.js"></script>
         <script src="script/home.js"></script>
-        <script src="script/routes.js"></script>-->
+        <script src="script/routes.js"></script>
         <script src="script/startup.js"></script>
     </body>
 </html>
