--- a/ui/_attachments/SpecRunner.html
+++ b/ui/_attachments/SpecRunner.html
@@ -18,6 +18,8 @@
         <script src="bower_components/jasmine-jquery/lib/jasmine-jquery.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- include source files here... -->
+        <script src="/_utils/script/jquery.couch.js"></script>
+        <script src="templates.js"></script>
         <script src="script/app.js" type="text/javascript"></script>
         <script src="script/routes.js" type="text/javascript" charset="utf-8"></script>
         <script src="script/wifi.js" type="text/javascript" charset="utf-8"></script>
