--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -17,45 +17,47 @@
     <body>
         <header>
             <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
-                <div class="navbar-header">
-                    <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse"type="button">
-                        <span class="sr-only"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="index.html" class="navbar-brand">Router Configuration</a>
-                </div>
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse"type="button">
+                            <span class="sr-only"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a href="index.html" class="navbar-brand">Router Configuration</a>
+                    </div>
 
-                <div class="collapse navbar-collapse" id="navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active">
-                            <a href="index.html" id="home-link"><span class="glyphicon glyphicon-home"></span> Home</a>
-                        </li>
-                        <li class="dropdown">
-                            <a id="network-link" class="dropdown-toggle" data-toggle="dropdown">Network <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a id="network-wifi-link" href="index.html/#/wifi"><span class="glyphicon glyphicon-signal"></span> Wi-Fi</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a id="services-link" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a id="registrations-link" href="index.html/#/notifications">Notification Registrations</a>
-                                </li>
-                                <li>
-                                    <a id="devices-link" href="index.html/#/control">Devices</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a id="history-link" href="index.html/#/history">History</a>
-                        </li>
-                    </ul>
-                    <div id="user-id" class="navbar-right"></div>
+                    <div class="collapse navbar-collapse" id="navbar-collapse">
+                        <ul class="nav navbar-nav">
+                            <li class="active">
+                                <a href="index.html" id="home-link"><span class="glyphicon glyphicon-home"></span> Home</a>
+                            </li>
+                            <li class="dropdown">
+                                <a id="network-link" class="dropdown-toggle" data-toggle="dropdown">Network <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a id="network-wifi-link" href="index.html/#/wifi"><span class="glyphicon glyphicon-signal"></span> Wi-Fi</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a id="services-link" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a id="registrations-link" href="index.html/#/notifications">Notification Registrations</a>
+                                    </li>
+                                    <li>
+                                        <a id="devices-link" href="index.html/#/control">Devices</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a id="history-link" href="index.html/#/history">History</a>
+                            </li>
+                        </ul>
+                        <div id="user-id" class="navbar-right"></div>
+                    </div>
                 </div>
             </nav>
         </header>
