--- a/ui/_attachments/SpecRunner.html
+++ b/ui/_attachments/SpecRunner.html
@@ -16,7 +16,7 @@
         <script src="bower_components/jasmine-jquery/lib/jasmine-jquery.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- include source files here... -->
-        <script src="/_utils/script/jquery.couch.js"></script>
+        <script src="vendor/couchapp/jquery.couch.js"></script>
         <script src="templates.js"></script>
         <script src="script/app.js" type="text/javascript"></script>
         <script src="script/routes.js" type="text/javascript" charset="utf-8"></script>
