--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -76,7 +76,7 @@
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
         <script src="bower_components/jquery-json/dist/jquery.json.min.js"></script>
-        <script src="/_utils/script/jquery.couch.js"></script>
+        <script src="vendor/couchapp/jquery.couch.js"></script>
         <script src="templates.js"></script>
         <script src="script/app.js"></script>
         <script src="script/history.js"></script>
