--- a/ui/_attachments/SpecRunner.html
+++ b/ui/_attachments/SpecRunner.html
@@ -4,16 +4,16 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Jasmine Spec Runner v2.0.0</title>
 
-        <link rel="stylesheet" type="text/css" href="bower_components/jasmine/lib/jasmine-core/jasmine.css">
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/underscore/underscore.js"></script>
-        <script src="bower_components/backbone/backbone.js"></script>
-        <script src="bower_components/backbone-couchdb/backbone-couchdb.js"></script>
+        <link rel="stylesheet" type="text/css" href="libs/jasmine/jasmine.css">
+        <script src="libs/jquery.min.js"></script>
+        <script src="libs/underscore-min.js"></script>
+        <script src="libs/backbone/backbone.js"></script>
+        <script src="libs/backbone-couchdb/backbone-couchdb.js"></script>
 
-        <script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
-        <script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
-        <script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core/boot.js"></script>
-        <script src="bower_components/jasmine-jquery/lib/jasmine-jquery.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="libs/jasmine/lib/jasmine-core/jasmine.js"></script>
+        <script type="text/javascript" src="libs/jasmine/lib/jasmine-core/jasmine-html.js"></script>
+        <script type="text/javascript" src="libs/jasmine/lib/jasmine-core/boot.js"></script>
+        <script src="libs/jasmine-jquery/lib/jasmine-jquery.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- include source files here... -->
         <script src="vendor/couchapp/jquery.couch.js"></script>
