--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -65,13 +65,13 @@
             </div>
         </section>
 
-        <script src="bower_components/jquery/dist/jquery.min.js"></script>
-        <script src="bower_components/underscore/underscore-min.js"></script>
-        <script src="bower_components/backbone/backbone.js"></script>
-        <script src="bower_components/backbone-couchdb/backbone-couchdb.js"></script>
-        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
-        <script src="bower_components/jquery-json/dist/jquery.json.min.js"></script>
+        <script src="libs/jquery.min.js"></script>
+        <script src="libs/underscore-min.js"></script>
+        <script src="libs/backbone/backbone.js"></script>
+        <script src="libs/backbone-couchdb/backbone-couchdb.js"></script>
+        <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="libs/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+        <script src="libs/jquery-json/dist/jquery.json.min.js"></script>
         <script src="vendor/couchapp/jquery.couch.js"></script>
         <script src="templates.js"></script>
         <script src="script/app.js"></script>
