spec runner updated

--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -67,7 +67,7 @@
 
         <script src="libs/jquery.min.js"></script>
         <script src="libs/underscore-min.js"></script>
-        <script src="libs/backbone/backbone.js"></script>
+        <script src="libs/backbone.js"></script>
         <script src="libs/backbone-couchdb/backbone-couchdb.js"></script>
         <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="libs/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
