--- a/ui/_attachments/SpecRunner.html
+++ b/ui/_attachments/SpecRunner.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" type="text/css" href="libs/jasmine/jasmine.css">
         <script src="libs/jquery.min.js"></script>
         <script src="libs/underscore-min.js"></script>
-        <script src="libs/backbone/backbone.js"></script>
+        <script src="libs/backbone.js"></script>
         <script src="libs/backbone-couchdb/backbone-couchdb.js"></script>
 
-        <script type="text/javascript" src="libs/jasmine/lib/jasmine-core/jasmine.js"></script>
-        <script type="text/javascript" src="libs/jasmine/lib/jasmine-core/jasmine-html.js"></script>
-        <script type="text/javascript" src="libs/jasmine/lib/jasmine-core/boot.js"></script>
-        <script src="libs/jasmine-jquery/lib/jasmine-jquery.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="libs/jasmine/jasmine.js"></script>
+        <script type="text/javascript" src="libs/jasmine/jasmine-html.js"></script>
+        <script type="text/javascript" src="libs/jasmine/boot.js"></script>
+        <script src="libs/jasmine-jquery.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- include source files here... -->
         <script src="vendor/couchapp/jquery.couch.js"></script>
