--- a/ui/_attachments/SpecRunner.html
+++ b/ui/_attachments/SpecRunner.html
@@ -8,7 +8,7 @@
         <script src="libs/jquery.min.js"></script>
         <script src="libs/underscore-min.js"></script>
         <script src="libs/backbone.js"></script>
-        <script src="libs/backbone-couchdb/backbone-couchdb.js"></script>
+        <script src="libs/backbone-couchdb.js"></script>
 
         <script type="text/javascript" src="libs/jasmine/jasmine.js"></script>
         <script type="text/javascript" src="libs/jasmine/jasmine-html.js"></script>
