--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -68,8 +68,8 @@
         <script src="libs/jquery.min.js"></script>
         <script src="libs/underscore-min.js"></script>
         <script src="libs/backbone.js"></script>
-        <script src="libs/backbone-couchdb/backbone-couchdb.js"></script>
-        <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="libs/backbone-couchdb.js"></script>
+        <script src="libs/bootstrap/js/bootstrap.min.js"></script>
         <script src="libs/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
         <script src="libs/jquery-json/dist/jquery.json.min.js"></script>
         <script src="vendor/couchapp/jquery.couch.js"></script>
