load other files

--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -70,8 +70,8 @@
         <script src="libs/backbone.js"></script>
         <script src="libs/backbone-couchdb.js"></script>
         <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-        <script src="libs/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
-        <script src="libs/jquery-json/dist/jquery.json.min.js"></script>
+        <script src="libs/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+        <script src="libs/jquery.json.min.js"></script>
         <script src="vendor/couchapp/jquery.couch.js"></script>
         <script src="templates.js"></script>
         <script src="script/app.js"></script>
