--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -34,7 +34,7 @@
                                 <a href="index.html" id="home-link"><span class="glyphicon glyphicon-home"></span> Home</a>
                             </li>
                             <li>
-                                <a id="network-wifi-link" href="index.html/#/wifi"><span class="glyphicon glyphicon-signal"></span> Wi-Fi</a>
+                                <a id="wifi-link" href="index.html/#/wifi"><span class="glyphicon glyphicon-signal"></span> Wi-Fi</a>
                             </li>
                             <li>
                                 <a id="registrations-link" href="index.html/#/notifications">Notification Registrations</a>
