--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -37,13 +37,13 @@
                                 <a id="wifi-link" href="index.html/#/wifi"><span class="glyphicon glyphicon-signal"></span> Wi-Fi</a>
                             </li>
                             <li>
-                                <a id="registrations-link" href="index.html/#/notifications">Notification Registrations</a>
+                                <a id="registrations-link" href="index.html/#/notifications"><span class="glyphicon glyphicon-inbox"></span> Notification Registrations</a>
                             </li>
                             <li>
-                                <a id="devices-link" href="index.html/#/control">Devices</a>
+                                <a id="devices-link" href="index.html/#/control"><span class="glyphicon glyphicon-phone"></span> Devices</a>
                             </li>
                             <li>
-                                <a id="history-link" href="index.html/#/history">History</a>
+                                <a id="history-link" href="index.html/#/history"><span class="glyphicon glyphicon-time"></span> History</a>
                             </li>
                         </ul>
                     </div>
