--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.css"/>
         <link rel="stylesheet" href="libs/bootstrap-datepicker/css/bootstrap-datepicker3.css"/>
         <link rel="stylesheet" href="libs/bootflat/css/bootflat.css"/>
+        <link rel="stylesheet" href="libs/bootflat/css/bootflat-extensions.css"/>
         <link rel="stylesheet" href="style/style.css" type="text/css"/>
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
