--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
+            <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse"type="button">
