--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -21,7 +21,7 @@
             <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse"type="button">
+                        <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse" type="button">
                             <span class="sr-only"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -39,7 +39,7 @@
                                 <a id="wifi-link" href="index.html/#/wifi"><span class="glyphicon glyphicon-signal"></span> Wi-Fi</a>
                             </li>
                             <li>
-                                <a id="registrations-link" href="index.html/#/notifications"><span class="glyphicon glyphicon-inbox"></span> Notification Registrations</a>
+                                <a id="registrations-link" href="index.html/#/notifications"><span class="glyphicon glyphicon-inbox"></span> Notifications</a>
                             </li>
                             <li>
                                 <a id="devices-link" href="index.html/#/control"><span class="glyphicon glyphicon-phone"></span> Devices</a>
