--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <base href="/ui/_design/ui/" target>
         <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.css"/>
+        <link rel="stylesheet" href="libs/jquery-ui.min.css" type="text/css"/>
         <link rel="stylesheet" href="libs/bootflat/css/bootflat.css"/>
         <link rel="stylesheet" href="style/style.css" type="text/css"/>
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -56,6 +57,7 @@
         </section>
 
         <script src="libs/jquery.min.js"></script>
+        <script src="libs/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="libs/underscore-min.js"></script>
         <script src="libs/backbone.js"></script>
         <script src="libs/backbone-couchdb.js"></script>
