--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -10,13 +10,9 @@
         <link rel="stylesheet" href="libs/jquery-ui.min.css" type="text/css"/>
         <link rel="stylesheet" href="libs/bootflat/css/bootflat.css"/>
         <link rel="stylesheet" href="style/style.css" type="text/css"/>
-        <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-        <!--[if lt IE 9]>
-          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
     </head>
     <body>
-        <header>
+        <header id="navigation-header">
             <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
                 <div class="container-fluid">
                     <div class="navbar-header">
@@ -60,6 +56,7 @@
         <script src="libs/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="libs/underscore-min.js"></script>
         <script src="libs/backbone.js"></script>
+        <script src="libs/backbone.marionette.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="libs/backbone-couchdb.js"></script>
         <script src="libs/bootstrap/js/bootstrap.min.js"></script>
         <script src="libs/jquery.json.min.js"></script>
