fix structure of notification screen

--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -12,25 +12,24 @@
         <link rel="stylesheet" href="style/style.css" type="text/css"/>
     </head>
     <body>
-        
-
         <script src="libs/jquery.min.js"></script>
         <script src="libs/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="libs/underscore-min.js"></script>
-        <script src="libs/backbone.js"></script>
+        <script src="libs/underscore-min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="libs/backbone.js" type="text/javascript" charset="utf-8"></script>
         <script src="libs/backbone.marionette.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="libs/backbone-couchdb.js"></script>
-        <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-        <script src="libs/jquery.json.min.js"></script>
-        <script src="vendor/couchapp/jquery.couch.js"></script>
-        <script src="templates.js"></script>
-        <script src="script/app.js"></script>
-        <script src="script/history.js"></script>
-        <script src="script/wifi.js"></script>
-        <script src="script/devices.js"></script>
-        <script src="script/notifications.js"></script>
-        <script src="script/home.js"></script>
-        <script src="script/routes.js"></script>
-        <script src="script/startup.js"></script>
+        <script src="libs/backbone-couchdb.js" type="text/javascript" charset="utf-8"></script>
+        <script src="libs/bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="libs/jquery.json.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="vendor/couchapp/jquery.couch.js" type="text/javascript" charset="utf-8"></script>
+        <script src="templates.js" type="text/javascript" charset="utf-8"></script>
+        <script src="script/app.js" type="text/javascript" charset="utf-8"></script>
+        <script src="script/history.js" type="text/javascript" charset="utf-8"></script>
+        <script src="script/main_user.js" type="text/javascript" charset="utf-8"></script>
+        <script src="script/wifi.js" type="text/javascript" charset="utf-8"></script>
+        <script src="script/devices.js" type="text/javascript" charset="utf-8"></script>
+        <script src="script/notifications.js" type="text/javascript" charset="utf-8"></script>
+        <script src="script/home.js" type="text/javascript" charset="utf-8"></script>
+        <script src="script/routes.js" type="text/javascript" charset="utf-8"></script>
+        <script src="script/startup.js" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
