--- a/ui/_attachments/SpecRunner.html
+++ b/ui/_attachments/SpecRunner.html
@@ -6,9 +6,13 @@
 
         <link rel="stylesheet" type="text/css" href="libs/jasmine/jasmine.css">
         <script src="libs/jquery.min.js"></script>
-        <script src="libs/underscore-min.js"></script>
-        <script src="libs/backbone.js"></script>
-        <script src="libs/backbone-couchdb.js"></script>
+        <script src="libs/underscore-min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="libs/backbone.js" type="text/javascript" charset="utf-8"></script>
+        <script src="libs/backbone.marionette.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="libs/backbone-couchdb.js" type="text/javascript" charset="utf-8"></script>
+        <script src="libs/bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="libs/jquery.json.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="vendor/couchapp/jquery.couch.js" type="text/javascript" charset="utf-8"></script>
 
         <script type="text/javascript" src="libs/jasmine/jasmine.js"></script>
         <script type="text/javascript" src="libs/jasmine/jasmine-html.js"></script>
@@ -16,7 +20,6 @@
         <script src="libs/jasmine-jquery.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- include source files here... -->
-        <script src="vendor/couchapp/jquery.couch.js"></script>
         <script src="templates.js"></script>
         <script src="script/app.js" type="text/javascript"></script>
         <script src="script/routes.js" type="text/javascript" charset="utf-8"></script>
