don't need target attribute

--- a/ui/_attachments/index.html
+++ b/ui/_attachments/index.html
@@ -5,7 +5,7 @@
     	<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <base href="/ui/_design/ui/" target>
+        <base href="/ui/_design/ui/">
         <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.css"/>
         <link rel="stylesheet" href="libs/bootflat/css/bootflat.css"/>
         <link rel="stylesheet" href="style/style.css" type="text/css"/>
